--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/bookstore_test
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://127.0.0.1:5433/bookstore_test}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Pikoff}
 
-spring.liquibase.user=postgres
-spring.liquibase.password=postgres
+spring.liquibase.user=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.liquibase.password=${SPRING_DATASOURCE_PASSWORD:Pikoff}
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 
 spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.PostgreSQL95Dialect
