--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.jpa.properties.hibernate.connection.driver_class: org.postgresql.Driver
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults: false
 spring.jpa.properties.hibernate.generateDll:false
 spring.jpa.show-sql=true
+security.oauth2.client.clientSecret=8SUNproNd4tWpfbXtXdXv4_G
+security.oauth2.client.clientAuthenticationScheme=form
+security.oauth2.client.scope=openid,email,profile
+security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v4/token
+security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2/v2/auth
+security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
+security.oauth2.resource.preferTokenInfo=true
+
+spring.main.allow-bean-definition-overriding=true
