--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,4 @@ security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2
 security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
 security.oauth2.resource.preferTokenInfo=true
 
-spring.main.allow-bean-definition-overriding=truespring.main.allow-bean-definition-overriding=true
+spring.main.allow-bean-definition-overriding=true
